# Quad_Qlslip

./: CMakeLists.txt
data/: Bezier_curve.m  Quad_data_code.asv  Quad_data_code.m  data_FL.csv  data_FR.csv  data_RL.csv  data_RR.csv  data_trunk.csv  ref_th1_th2.m
include/controller/: CompensationControl.hpp  FSM.hpp  FlightControl.hpp  StanceForceControl.hpp
include/robot/: Mclquad.hpp  RobotLeg.hpp
include/trajectory/: BezierTrajectory.hpp  MotionTrajectory.hpp  TrajectoryOptimization.hpp
include/utilities/: data_logging.hpp
model/mcl_quad/: quadrupedMCL.xml  scene.xml
src/: main.cc  simulate.cc
src/controller/: CompensationControl.cpp  FSM.cpp  FlightControl.cpp  StanceForceControl.cpp  TrackingController.cpp
src/robot/: MuJoCoInterface.cpp  RobotLeg.cpp
src/trajectory/: BezierTrajectory.cpp  MotionTrajectory.cpp  TrajectoryOptimization.cpp
src/utilities/: data_logging.cpp
